[package]
name = "hello-yew-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-file = "0.2.1"
js-sys = "0.3.57"
web-sys = { version = "0.3.57", features = ["File", "console", "DataTransfer"] }
yew = "0.19.3"
